--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
 		}
 	],
 	"require" : {
-		"php" : ">=5.6"
+		"php" : ">=7.2",
+		"illuminate/database" : "6.*"
 	},
 	"minimum-stability" : "stable",
 	"autoload" : {
